js/src/tests/test262/built-ins/Promise/reject/capability-invocation-error.js
var
P
=
function
(
executor
)
{
return
new
Promise
(
function
(
)
{
executor
(
function
(
)
{
}
function
(
)
{
throw
new
Test262Error
(
)
;
}
)
;
}
)
;
}
;
assert
.
throws
(
Test262Error
function
(
)
{
Promise
.
reject
.
call
(
P
)
;
}
)
;
reportCompare
(
0
0
)
;
